登录背景图

--- a/app/web/css/site.css
+++ b/app/web/css/site.css
@@ -119,6 +119,10 @@ a.desc:after {
     outline: none;
 }
 
+.register-t{
+    display: inline-block;
+    width:100%;
+}
 /*注册*/
 .sign-icon p{
     color: #999;
