--- a/project/web/css/dataview_common.css
+++ b/project/web/css/dataview_common.css
@@ -114,7 +114,7 @@ h6 {
 }
 
 .allnav {
-    height: calc(100% - 30px);
+    height: 2.5rem;
 }
 
 .loading {
@@ -205,7 +205,7 @@ h6 {
     line-height: .75rem;
 }
 
-.fullscreen span{
+.fullscreen span {
     color: rgba(255, 255, 255, .7);
     font-size: .18rem;
     padding-right: .1rem;
@@ -213,8 +213,8 @@ h6 {
     cursor: pointer;
 }
 
-.fullscreen:hover span{
-    opacity:100;
+.fullscreen:hover span {
+    opacity: 100;
 }
 
 .mainbox {
@@ -237,7 +237,7 @@ h6 {
 
 .boxall {
     border: 1px solid rgba(25, 186, 139, .17);
-    padding: 0 .2rem .4rem .15rem;
+    /* padding: 0 .2rem .4rem .15rem; */
     background: rgba(255, 255, 255, .04) url(../image/dataview/line.png);
     background-size: 100% auto;
     position: relative;
