--- a/project/web/css/dataview_common.css
+++ b/project/web/css/dataview_common.css
@@ -169,7 +169,14 @@ h6 {
     color: #fff;
     text-align: center;
     font-size: .4rem;
-    line-height: .8rem;
+    line-height: .7rem;
+}
+
+.head #showTime {
+    text-align: center;
+    color: rgba(255, 255, 255, .7);
+    font-size: .18rem;
+    display: block;
 }
 
 .head h1 img {
@@ -190,12 +197,6 @@ h6 {
     width: .37rem;
     display: inline-block;
     vertical-align: middle;
-}
-
-.weather span {
-    color: rgba(255, 255, 255, .7);
-    font-size: .18rem;
-    padding-right: .1rem;
 }
 
 .fullscreen {
