--- a/project/web/css/kanban.css
+++ b/project/web/css/kanban.css
@@ -5,26 +5,26 @@
 
 .map4 {
     width: 100%;
-    height: 4.35rem;
+    height: 5.66rem;
     left: 0%;
-    top: 4%;
-    margin-top: .15rem;
+    top: -11%;
+    margin-top: 0.15rem;
 }
 
 .map1 {
-    width: 4.13rem;
-    top: .24rem;
-    left: 1.97rem;
+    width: 5.37rem;
+    top: -0.37rem;
+    left: 1.33rem;
 }
 
 .map2 {
-    width: 3.56rem;
-    top: .54rem;
-    left: 2.26rem;
+    width: 4.63rem;
+    top: 0rem;
+    left: 1.72rem;
 }
 
 .map3 {
-    width: 3.28rem;
-    top: 0.67rem;
-    left: 2.4rem;
+    width: 4.26rem;
+    top: 0.18rem;
+    left: 1.9rem;
 }
